--- a/less/navigation.less
+++ b/less/navigation.less
@@ -44,6 +44,10 @@
         }
       }
 
+      @media @tablet {
+        padding: 0 18%;
+      }
+
       @media @phone {
         padding: 0 10%;
         margin-top: 8px;
